src/test/ui/unsafe/rfc-2585-unsafe_op_in_unsafe_fn.stderr
warning: call to unsafe function is unsafe and requires unsafe block (error E0133)
  --> $DIR/rfc-2585-unsafe_op_in_unsafe_fn.rs:8:5
   |
LL |     unsf();
   |     ^^^^^^ call to unsafe function
   |
note: the lint level is defined here
  --> $DIR/rfc-2585-unsafe_op_in_unsafe_fn.rs:2:9
   |
LL | #![warn(unsafe_op_in_unsafe_fn)]
   |         ^^^^^^^^^^^^^^^^^^^^^^
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: unnecessary `unsafe` block
  --> $DIR/rfc-2585-unsafe_op_in_unsafe_fn.rs:17:14
   |
LL |     unsafe { unsafe { unsf() } }
   |     ------   ^^^^^^ unnecessary `unsafe` block
   |     |
   |     because it's nested under this `unsafe` block
   |
note: the lint level is defined here
  --> $DIR/rfc-2585-unsafe_op_in_unsafe_fn.rs:3:9
   |
LL | #![deny(unused_unsafe)]
   |         ^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

